--- a/Therefore.Engine/Therefore.Engine.csproj
+++ b/Therefore.Engine/Therefore.Engine.csproj
@@ -42,7 +42,10 @@
     <Compile Include="Expressions\OrExpression.cs" />
     <Compile Include="Expressions\ThenExpression.cs" />
     <Compile Include="Expressions\VariableExpression.cs" />
+    <Compile Include="Parser\Span.cs" />
+    <Compile Include="Parser\Token.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
