Added the parser/syntactic analyzer.

--- a/Therefore.Engine/Therefore.Engine.csproj
+++ b/Therefore.Engine/Therefore.Engine.csproj
@@ -42,7 +42,13 @@
     <Compile Include="Expressions\OrExpression.cs" />
     <Compile Include="Expressions\ThenExpression.cs" />
     <Compile Include="Expressions\VariableExpression.cs" />
+    <Compile Include="Parser\Nodes\BinaryOperatorNode.cs" />
+    <Compile Include="Parser\Nodes\ParenthesisNode.cs" />
+    <Compile Include="Parser\Nodes\ParseTreeNode.cs" />
+    <Compile Include="Parser\Nodes\UnaryOperatorNode.cs" />
+    <Compile Include="Parser\Nodes\VariableNode.cs" />
     <Compile Include="Parser\ParseException.cs" />
+    <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\Scanner.cs" />
     <Compile Include="Parser\Span.cs" />
     <Compile Include="Parser\Token.cs" />
