--- a/Therefore.Engine/Therefore.Engine.csproj
+++ b/Therefore.Engine/Therefore.Engine.csproj
@@ -43,6 +43,10 @@
     <Compile Include="Expressions\OrExpression.cs" />
     <Compile Include="Expressions\ThenExpression.cs" />
     <Compile Include="Expressions\VariableExpression.cs" />
+    <Compile Include="Game\Constraint.cs" />
+    <Compile Include="Game\ConstraintViolation.cs" />
+    <Compile Include="Game\ConstraintVisior.cs" />
+    <Compile Include="Game\ParenthesizedNotConstraint.cs" />
     <Compile Include="Parser\Nodes\BinaryOperatorNode.cs" />
     <Compile Include="Parser\Nodes\ParenthesisNode.cs" />
     <Compile Include="Parser\Nodes\ParseTreeNode.cs" />
