--- a/Therefore.Engine/Therefore.Engine.csproj
+++ b/Therefore.Engine/Therefore.Engine.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Parser\Nodes\UnaryOperatorNode.cs" />
     <Compile Include="Parser\Nodes\VariableNode.cs" />
     <Compile Include="Parser\OperatorAssociativity.cs" />
+    <Compile Include="Parser\OperatorDescriptor.cs" />
+    <Compile Include="Parser\OperatorDescriptorList.cs" />
     <Compile Include="Parser\OperatorTypes\AndOperatorType.cs" />
     <Compile Include="Parser\OperatorTypes\ThenOperatorType.cs" />
     <Compile Include="Parser\OperatorTypes\OrOperatorType.cs" />
