Converted `Parser` to be non-static and to take options in its constructor.

--- a/Therefore.Engine/Therefore.Engine.csproj
+++ b/Therefore.Engine/Therefore.Engine.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Parser\OperatorTypes\IBinaryOperatorType.cs" />
     <Compile Include="Parser\ParseException.cs" />
     <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Parser\ParserOptions.cs" />
     <Compile Include="Parser\ParseTree.cs" />
     <Compile Include="Parser\Scanner.cs" />
     <Compile Include="Parser\Span.cs" />
