--- a/Therefore.Game/Therefore.Game.csproj
+++ b/Therefore.Game/Therefore.Game.csproj
@@ -45,7 +45,9 @@
     <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameState.cs" />
-    <Compile Include="PlaceCardAction.cs"  />
+    <Compile Include="OptionCard.cs" />
+    <Compile Include="PlaceOptionCardAction.cs" />
+    <Compile Include="PlaceCardAction.cs" />
     <Compile Include="PlacementCard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyDictionary`2.cs" />
