--- a/Therefore.Game/Therefore.Game.csproj
+++ b/Therefore.Game/Therefore.Game.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Card.cs" />
     <Compile Include="CardAction.cs" />
     <Compile Include="DictionaryExtensions.cs" />
+    <Compile Include="ExsculpoCard.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="OptionCard.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="PlacementCard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyDictionary`2.cs" />
+    <Compile Include="RemoveCardAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Therefore.Engine\Therefore.Engine.csproj">
