--- a/Therefore.Game/Therefore.Game.csproj
+++ b/Therefore.Game/Therefore.Game.csproj
@@ -40,8 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AverageCardsScoringSystem.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="CardAction.cs" />
+    <Compile Include="ConstantScoringSystem.cs" />
     <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="EndRoundCardAction.cs" />
     <Compile Include="ErgoCard.cs" />
@@ -55,6 +57,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyDictionary`2.cs" />
     <Compile Include="RemoveCardAction.cs" />
+    <Compile Include="ScoringSystem.cs" />
+    <Compile Include="TotalCardsScoringSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Therefore.Engine\Therefore.Engine.csproj">
