--- a/Therefore.Game/Therefore.Game.csproj
+++ b/Therefore.Game/Therefore.Game.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameOptions.cs" />
     <Compile Include="ScoringSystems\AverageCardsScoringSystem.cs" />
     <Compile Include="Cards\Card.cs" />
     <Compile Include="CardActions\CardAction.cs" />
