Added customizations to the cards and the random wood grain background.

--- a/Therefore.Web/Therefore.Web.csproj
+++ b/Therefore.Web/Therefore.Web.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\GameController.cs" />
+    <Compile Include="HtmlHelpers.cs" />
+    <Content Include="Content\maple.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
