--- a/Therefore.Web/Views/Web.config
+++ b/Therefore.Web/Views/Web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="Therefore.Game.Cards" />
+        <add namespace="Therefore.Web" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
