Added the style sheet "Play" and changed the font color for the game.

--- a/Therefore.Web/Therefore.Web.csproj
+++ b/Therefore.Web/Therefore.Web.csproj
@@ -62,6 +62,7 @@
     <Compile Include="HtmlHelpers.cs" />
     <Content Include="Content\dark-wood-1.jpg" />
     <Content Include="Content\maple.jpg" />
+    <Content Include="Content\Play.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
